# ai-job-hunt-agent

./: README.md  app.py  combined.txt  main.py  playground.py  project_tree.txt  pyproject.toml  requirements.txt  sequential_help.txt  test_jd.py  test_security.py  workspace_export.txt
agents/: agent.py  jd_analyzer.py  outreach_writer.py  quality_checker.py  recommendation.py  resume_analyzer.py
coordinator/: orchestrator.py
prompts/: __init__.py  jd_prompt.py  outreach_prompt.py  quality_prompt.py  recommendation_prompt.py  resume_prompt.py
tools/: pdf_reader.py
utils/: constants.py  helper.py  logger.py  validators.py
